--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,30 @@
-version: '3.1'
-
+version: "3.7"
 services:
-
-  db:
-    image: mysql
-    command: --default-authentication-plugin=mysql_native_password
-    restart: always
-    environment:
-      - MYSQL_ROOT_PASSWORD=jessie0625
-    ports:
+ db:
+   image: "mysql:5.7"
+   environment:
+     MYSQL_ROOT_PASSWORD: jessie0625
+     MYSQL_USERNAME: root
+     MYSQL_PASSWORD: jessie0625
+   ports:
       - "3307:3306"
-
-  app:
-    build: .
-    ports:
+ website:
+   depends_on:
+      - "db"
+   build: .
+   ports:
       - "3000:3000"
-    command: rails s -p 3000 -b '0.0.0.0'
-    volumes: 
+   environment:
+     DB_USERNAME: root
+     DB_PASSWORD: jessie0625
+     DB_DATABASE: codementor
+     DB_PORT: 3306
+     DB_HOST: db
+     RAILS_ENV: development
+     RAILS_MAX_THREADS: 5
+   volumes:
       - ".:/app"
-    ports:
-      - "3001:3000"
-    depends_on:
-      - db
-    links:
-      - db
-    environment:
-      DB_USER: root
-      DB_NAME: root
-      DB_PASSWORD: jessie0625
-      DB_HOST: db
+      - "./config/docker/database.yml:/app/config/database.yml"
+
+volumes:
+  db:
