add test into initialization process

--- a/config/docker/database.yml
+++ b/config/docker/database.yml
@@ -14,6 +14,10 @@ development:
   <<: *default
   database: <%= ENV['DB_DATABASE'] %>_development
 
+test:
+  <<: *default
+  database: <%= ENV['DB_DATABASE'] %>_test
+
 production:
   <<: *default
   database: <%= ENV['DB_DATABASE'] %>
